[workspace]
members = ["libs/*", "frpc/*"]

[package]
name = "frpc"
version = "0.1.0"
edition = "2021"

license = "Apache-2.0"
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/frpc.rs"
keywords = ["rpc"]
description = "RPC framework"

exclude = ["/examples", "/tests",  ".*"]

[dependencies]
databuf = "0.5"
async-gen = "0.2.3"
std-lib = { version = "0.1", path = "libs/std-lib" }

frpc-macros = { version = "0.1", path = "frpc/macros" }
frpc-message = { version = "0.1", path = "frpc/message" }
frpc-transport-core = { version = "0.1", path = "frpc/transport-core" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
frpc-transport-http = { path = "frpc/transport-http" }
frpc-codegen-client = { path = "frpc/codegen-client" }

# [profile.dev.package."frpc-codegen-client"]
# opt-level = 3

[[test]]
name = "rpc"
harness = false
