[package]
name = "type-id-derive-impl"
version = "0.1.0"
edition = "2021"

license = "Apache-2.0"
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/frpc.rs"
description = "..."

exclude = ["/examples", "/tests",  ".*"]

[dependencies]
syn = "2.0"
quote2 = "0.7"