[package]
name = "type-id"
version = "0.1.0"
edition = "2021"

license = "Apache-2.0"
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/frpc.rs"
description = "..."

exclude = ["/examples", "/tests",  ".*"]

[features]
default = []

full = ["debug", "clone", "hash", "serde"]
hash = []
clone = []
debug = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["serde_derive"], default-features = false, optional = true }